--- a/backServer/vistas/html/maintenance_history.html
+++ b/backServer/vistas/html/maintenance_history.html
@@ -83,7 +83,8 @@
                         <p><b>{{ repair.milage }}</b></p>
                         <p><b>{{ repair.description }}</b></p>
                         <p><b>{{ repair.cost }}</b></p>
-                        <!-- generar botton para eliminar con referencia a /delete/repair/{{ repair.pk }} -->
+                        <p><b>{{ repair.oil }}</b></p>
+                        <p><b>{{ repair.filter }}</b></p>
                     </div>
                 </div>
             </div>
