--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -130,9 +130,11 @@
                             </div>
                             {% endif %}
                         </div>
-                        {% for not in notifications %}
-                        <p>{{ not }}</p>
-                        {% endfor%}
+                        <div>
+                            {% for not in notifications %}
+                            <p>{{ not }}</p>
+                            {% endfor%}
+                        </div>
                         <ul id="edit" class="list-group row justify-content-md-center">
                             <form id="myform" method="post" enctype="multipart/form-data">
                                 {% csrf_token %}
