--- a/backServer/vistas/html/base.html
+++ b/backServer/vistas/html/base.html
@@ -30,7 +30,7 @@
     <div class="alert alert-danger fade show" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
             <script src="{% static 'alert.js' %}"></script>
-            <p class="fw-semibold" id="messages"></p>{{message}}</p>
+            <p class="fw-normal" id="messages">{{message}}</p>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     </div>
