--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -75,18 +75,16 @@
     <div class="container">
         <div class="d-flex justify-content-center mt-3 mb-3">
             <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-end"
-                            style="position: absolute; z-index: 1000;">
-                            <div class="alert alert-danger fade show" role="alert" aria-live="assertive"
-                                aria-atomic="true">
-                                <div class="toast-header">
-                                    {% for not in notifications %}
-                                    <p class="fw-semibold" id="messages"></p>{{ not }}</p>
-                                    {% endfor%}
-                                    <button type="button" class="btn-close" data-bs-dismiss="alert"
-                                        aria-label="Close"></button>
-                                </div>
-                            </div>
-                        </div>
+                style="position: absolute; z-index: 1000;">
+                <div class="alert alert-danger fade show" role="alert" aria-live="assertive" aria-atomic="true">
+                    <div class="float-end">
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    {% for not in notifications %}
+                    <p class="fw-normal" id="messages">{{ not }}</p>
+                    {% endfor%}
+                </div>
+            </div>
             <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 col-xxl-5 mt-3 mb-3">
                 <div class="card h-100 text-center">
                     <div id="carouselExampleFade" class="carousel slide carousel-dark carousel-fade"
