--- a/backServer/vistas/html/maintenance_history.html
+++ b/backServer/vistas/html/maintenance_history.html
@@ -78,11 +78,11 @@
                     <div class="text-end">
                         <script>
                             //Cuadro de diálogo de confirmación en JavaScript
-                            function confirmarAccesoURL() {
+                            function confirmarDelete() {
                                 return confirm("¿Está seguro que lo desea eliminar?");
                             }
                         </script>
-                        <a href="/delete/repair/{{ repair.pk }}" onclick="return confirmarAccesoURL()"
+                        <a href="/delete/repair/{{ repair.pk }}" onclick="return confirmarDelete()"
                             class="btn btn-outline-dark btn-lg"> <i class="fa-sharp fa-solid fa-xmark"></i></a>
                     </div>
                     <div class="card-body">
