--- a/backServer/vistas/html/maintenance_history.html
+++ b/backServer/vistas/html/maintenance_history.html
@@ -20,8 +20,8 @@
                         <i class="fa-solid fa-arrow-left"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="btn btn-outline-success me-2" href="add_repair/{{ flote.code }}"
-                        role="button">Mantenimiento de {{ flote.code }}</a>
+                    <a class="btn btn-outline-success me-2" href="../add_repair/{{ code }}"
+                        role="button">Mantenimiento de {{ code }}</a>
                 </li>
                 <li class="nav-item">
                     <a class="btn btn-outline-success me-2" href="/flotes/add" role="button">Agregar flota</a>
