--- a/backServer/vistas/html/base.html
+++ b/backServer/vistas/html/base.html
@@ -27,12 +27,10 @@
 {% for message in messages %}
 <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center w-100"
     style="position: absolute; z-index: 1000;">
-    <div class="alert alert-danger fade show" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="toast-header">
+    <div class="alert alert-danger alert-dismissible fade show" role="alert" aria-live="assertive" aria-atomic="true">
             <script src="{% static 'alert.js' %}"></script>
             <p class="fw-normal" id="messages">{{message}}</p>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
     </div>
 </div>
 {% endfor %}
