--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -77,7 +77,7 @@
             <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-end"
                 style="position: absolute; z-index: 1000;">
                 <div class="alert alert-danger fade show" role="alert" aria-live="assertive" aria-atomic="true">
-                    <div class="float-end">
+                    <div class="d-flex justify-content-end">
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     </div>
                     {% for not in notifications %}
