--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -74,17 +74,22 @@
     <!-- Contenido de la flota -->
     <div class="container">
         <div class="d-flex justify-content-center mt-3 mb-3">
+            {% if notification %}
             <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-end"
                 style="position: absolute; z-index: 1000;">
-                <div class="alert alert-danger fade show" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="alert alert-danger fade show" style="padding-bottom: .1rem;" role="alert" aria-live="assertive" aria-atomic="true">
                     <div class="d-flex justify-content-end">
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     </div>
-                    {% for not in notifications %}
-                    <p class="fw-normal" id="messages">{{ not }}</p>
-                    {% endfor%}
+                    <p class="fw-normal" id="messages">
+                        {% for not in notifications %}
+                        {{ not }}
+                        <br>
+                        {% endfor%}
+                    </p>
                 </div>
             </div>
+            {% endif %}
             <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 col-xxl-5 mt-3 mb-3">
                 <div class="card h-100 text-center">
                     <div id="carouselExampleFade" class="carousel slide carousel-dark carousel-fade"
