--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -74,7 +74,7 @@
     <!-- Contenido de la flota -->
     <div class="container">
         <div class="d-flex justify-content-center mt-3 mb-3">
-            {% if notification %}
+            {% if notifications %}
             <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-end"
                 style="position: absolute; z-index: 1000;">
                 <div class="alert alert-danger fade show" style="padding-bottom: .1rem;" role="alert" aria-live="assertive" aria-atomic="true">
