some new functionality

--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -83,7 +83,7 @@
                     </div>
                     <p class="fw-normal" id="messages">
                         {% for not in notifications %}
-                        {{ not }}
+                        {{ not.msg }}
                         <br>
                         {% endfor%}
                     </p>
