--- a/backServer/vistas/html/alerts.html
+++ b/backServer/vistas/html/alerts.html
@@ -16,12 +16,12 @@
             </a>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                    <a class="btn btn-outline-success me-2" href="add_repair/{{ flote.code }}"
-                        role="button">Mantenimiento de {{ flote.code }}</a>
+                    <a class="btn btn-outline-success me-2" href="../home/flotes/add_repair/{{ code }}"
+                        role="button">Mantenimiento de {{ code }}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="btn btn-outline-success me-2" href="repair/{{ flote.code }}" role="button">Historial
-                        de {{ flote.code }}</a>
+                    <a class="btn btn-outline-success me-2" href="../home/flotes/repair/{{ code }}" role="button">Historial
+                        de {{ code }}</a>
                 </li>
                 <li class="nav-item">
                     <a class="btn btn-outline-success me-2" href="/flotes/add" role="button">Agregar flota</a>
@@ -75,6 +75,7 @@
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ alertform }}
+        <button type="submit"> Crear </button>
     </form>
     {% for alert in alerts %}
         {{alert}}
