--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -28,8 +28,7 @@
                 </li> -->
 
                 <li class="nav-item">
-                    <!-- ARREGLAR ESTO -->
-                    <a class="btn btn-outline-success me-2" href="/alerts/..." role="button">Agregar alerta</a>
+                    <a class="btn btn-outline-success me-2" href="/alerts/{{ flote.code }}" role="button">Agregar alerta</a>
                 </li>
 
 
@@ -131,8 +130,7 @@
                             </li> -->
 
                             <li class="nav-item mt-3">
-                                <!-- ARREGLAR -->
-                                <a class="nav-link active" href="/alerts/..." role="button">Agregar alerta</a>
+                                <a class="nav-link active" href="/alerts/{{ flote.code }}" role="button">Agregar alerta</a>
                             </li>
 
                             <li class="nav-item mt-3">
