--- a/backServer/vistas/html/ti_vista-flota.html
+++ b/backServer/vistas/html/ti_vista-flota.html
@@ -29,8 +29,7 @@
 					<a class="btn btn-outline-success me-2" href="/flotes/add" role="button">Agregar flota</a>
 				</li>
 				<li class="nav-item">
-                    <!-- ARREGLAR -->
-                    <a class="btn btn-outline-success me-2" href="/alerts/..." role="button">Agregar alerta</a>
+                    <a class="btn btn-outline-success me-2" href="/alerts/null" role="button">Agregar alerta</a>
                 </li>
 				<li class="nav-item">
 					<a class="btn btn-outline-success me-2" type="button" href="/logout" role="button">Cerrar Sesión</a>
@@ -71,8 +70,7 @@
 							<a class="nav-link active" href="/flotes/add">Agregar flota</a>
 						</li>
 						<li class="nav-item mt-3">
-							<!-- ARREGLAR -->
-							<a class="nav-link active" href="/alerts/..." role="button">Agregar alerta</a>
+							<a class="nav-link active" href="/alerts/null" role="button">Agregar alerta</a>
 						</li>
 						<li class="nav-item mt-3">
 							<a class="nav-link active" href="/logout">Cerrar Sesión</a>
