--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -11,7 +11,7 @@
         <!-- Navegador NO RESPONSIVE -->
         <div class="container-fluid no-responsive">
             <a class="navbar-brand" href="/home/flotes">
-                <img src={% static 'logo-nav.png' %} alt="Logo" width="120" height="50"
+                <img src={% static 'img/logo-nav.png' %} alt="Logo" width="120" height="50"
                     class="d-inline-block align-text-top">
             </a>
             <ul class="nav justify-content-end">
@@ -71,7 +71,7 @@
         <!-- Navegador RESPONSIVE -->
         <div class="container-fluid responsive">
             <a class="navbar-brand" href="../flotes">
-                <img src={% static 'logo-nav.png' %} alt="Logo" width="120" height="50"
+                <img src={% static 'img/logo-nav.png' %} alt="Logo" width="120" height="50"
                     class="d-inline-block align-text-top">
             </a>
             <!-- NO ENTIENDO PQ NO FUNCIONA ESTO, LUEGO LO REVISO -->
